@@ -1,0 +1,18 @@
+{\rtf1\ansi\ansicpg1252\cocoartf949\cocoasubrtf270
+{\fonttbl\f0\froman\fcharset0 Times-Roman;\f1\fswiss\fcharset0 ArialMT;\f2\fnil\fcharset0 BigCaslon-Medium;
+\f3\fnil\fcharset0 AGaramondPro-Regular;}
+{\colortbl;\red255\green255\blue255;}
+{\info
+{\title }
+{\subject }
+{\doccomm }
+{\author }
+{\*\company }
+{\*\copyright }
+{\keywords cursorLocation=27}}\margl1008\margr1008\margt1008\vieww15520\viewh18060\viewkind2\viewscale120
+\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\sl360\slmult1\ql\qnatural\pardirnatural
+
+\f0\fs26 \cf0 Font 1 
+\f1\fs28 Font 2 
+\f2\fs36 Font 3 
+\f3\fs48 Font 4}
